<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="123dp"
                android:layout_marginTop="10dp"
                android:contentDescription="Myself"
                app:srcCompat="@mipmap/ic_launcher_foreground"
                tools:layout_editor_absoluteX="112dp"
                tools:layout_editor_absoluteY="386dp" />

            <TextView
                android:id="@+id/TXT_DATE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_txt_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.054" />

            <EditText
                android:id="@+id/TXT_NAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/main_txt_name"
                android:inputType="textCapCharacters|textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.133" />

            <EditText
                android:id="@+id/TXT_FIRSTNAME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/main_txt_firstName"
                android:inputType="textCapWords|textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.288" />

            <EditText
                android:id="@+id/TXT_MAIL"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:hint="Email (auto)"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.438" />

            <LinearLayout
                android:layout_width="227dp"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/CHK_CPP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/main_chk_cpp"
                    tools:layout_editor_absoluteX="124dp"
                    tools:layout_editor_absoluteY="339dp" />

                <CheckBox
                    android:id="@+id/CHK_C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_chk_c"
                    tools:layout_editor_absoluteX="124dp"
                    tools:layout_editor_absoluteY="339dp" />

                <CheckBox
                    android:id="@+id/CHK_Csharp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/main_chk_cs"
                    tools:layout_editor_absoluteX="124dp"
                    tools:layout_editor_absoluteY="339dp" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/RADGRP_GENDER"
                android:layout_width="157dp"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.546"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.597">

                <RadioButton
                    android:id="@+id/RAD_MALE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/main_rad_male" />

                <RadioButton
                    android:id="@+id/RAD_FEMALE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/main_rad_female" />
            </RadioGroup>

            <EditText
                android:id="@+id/NB_HOURS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/main_txt_nbHours"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="20dp">

                <Button
                    android:id="@+id/BT_RESET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_bt_reset"
                    tools:layout_editor_absoluteX="171dp"
                    tools:layout_editor_absoluteY="475dp" />

                <Button
                    android:id="@+id/BT_CONFIRM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_bt_confirm"
                    tools:layout_editor_absoluteX="171dp"
                    tools:layout_editor_absoluteY="475dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>